<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:ignore="ContentDescription,autoFill">

    <TextView
        android:id="@+id/title"
        style="@style/CommonTextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:text="@string/app_name"
        android:textColor="@color/gray_333333"
        android:textSize="23sp" />

    <LinearLayout
        android:id="@+id/account_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:orientation="horizontal">

        <TextView
            style="@style/CommonTextStyle"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:text="@string/account"
            android:textColor="@color/gray_333333"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp">

            <EditText
                android:id="@+id/account_edit"
                style="@style/CommonEditStyle"
                android:layout_width="200dp"
                android:hint="@string/hint_input_account"
                android:inputType="text"
                android:maxLength="12"
                android:padding="10dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_area"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            style="@style/CommonTextStyle"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:text="@string/password"
            android:textColor="@color/gray_333333"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp">

            <EditText
                android:id="@+id/password_edit"
                style="@style/CommonEditStyle"
                android:layout_width="200dp"
                android:hint="@string/hint_input_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:padding="10dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:background="@drawable/check_mark"
        android:textColor="@android:color/white"
        android:textSize="26sp" />

</RelativeLayout>